Linechart is finished

--- a/webserver/src/main/resources/static/automl-app/src/js/components/linechart/linechart.css
+++ b/webserver/src/main/resources/static/automl-app/src/js/components/linechart/linechart.css
@@ -1,3 +1,7 @@
+#linechart_container {
+        font: 10px "Helvetica Neue", Helvetica, Arial, sans-serif;
+        position: relative;
+    }
 
 .axis path,
 .axis line {
@@ -7,6 +11,10 @@
 }
 
 .x.axis path {
+    display: none;
+}
+
+.y.axis path {
     display: none;
 }
 
